# my-dev

./: .coveragerc  .travis.yml  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
etc/my-dev/: .my.conf.sample
my_dev/: base.py  client.py  cmd.py  config.py  parser.py  runner.py  ssh.py  users.py  utils.py
my_dev/tests/: utils.py
my_dev/tests/cli/: test_cli.py
my_dev/tests/functional/: base.py  test_client.py  utils.py
my_dev/tests/unit/: test_base.py  test_runner.py  test_ssh.py  test_utils.py
my_dev_client/: client.py  runner.py  users.py
my_dev_client/tests/functional/: test_client.py
my_dev_client/tests/unit/: test_base.py
