[metadata]
name = my-dev
summary = Utility for developers
description-file = README.rst
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = esikachev
author-email = esikachov@gmail.com

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    my_dev

[entry_points]
console_scripts =
    my = my_dev.runner:main

oslo.config.opts =
    sahara.config = my_dev.config:list_opts
